# SpiritX_CodeChefs_02

./: .gitignore  README.md  pyproject.toml
app/: utils.py
app/routers/: chatbot.py
backend/: .gitignore  README.md  pyproject.toml
backend/app/: auth.py  database.py  main.py
backend/app/models/: player.py  team.py  user.py
backend/app/routers/: __init__.py  admin.py  auth.py  user.py
frontend/: .editorconfig  .env  Dockerfile  README.md  middleware.ts  next.config.js  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.js
frontend/app/login/: page.tsx
frontend/app/logout/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: modal.tsx  theme-modal.tsx  theme-switch.tsx
frontend/config/: site.ts
frontend/lib/utils/: index.ts  middlewareUtils.ts  upfetch.ts
